# Coursework

./: .gitignore  README.md
parser/: .gitignore  CMakeLists.txt  blob.h  io.cpp  io.h  layer.cpp  layer.h  layer_factory.h  net.cpp  net.h
parser/include/: average_pooling.h  common.h  concat.h  convolutional.h  data.h  dropout.h  flatten.h  fully_connected.h  io.h  layer.h  layer_factory.h  layer_list.h  lrn.h  maxpooling.h  net.h  relu.h  softmax.h
parser/proto/: caffe.proto  caffe2.proto
parser/python/: main.py  nb.ipynb
parser/python/.ipynb_checkpoints/: nb-checkpoint.ipynb
parser/src/: average_pooling.cpp  common.cpp  concat.cpp  convolutional.cpp  data.cpp  dropout.cpp  flatten.cpp  fully_connected.cpp  io.cpp  layer.cpp  lrn.cpp  main.cpp  maxpooling.cpp  net.cpp  relu.cpp  softmax.cpp
